--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,15 +1,14 @@
 .todo-section {
+  display: block;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     justify-content: start;
     background-color: #161a2b;
-    display: flex;
-    flex-direction: column;
+   
     width: 50%;
     text-align: center;
-    
     border-radius: 10px;
     padding-bottom: 32px;
   }
@@ -25,12 +24,14 @@
     opacity: 0.4;
   }
   
-  .todo-form {
-    position: relative;
+  .update-section{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   
   .todo-input {
-    position: relative;
     padding: 14px 32px 14px 16px;
     border-radius: 4px 0 0 4px;
     border: 2px solid #ffffff;
@@ -58,22 +59,18 @@
   
   .todo-input.edit {
     border: 2px solid #0c9aff;
+    position: relative;
   }
   
   .todo-button.edit {
     position: absolute;
-    background: linear-gradient(
-      90deg,
-      rgba(20, 159, 255, 1) 0%,
-      rgb(56, 30, 30) 100%
-    );
+    background-color: #000;
     padding: 16px 22px;
   }
   
   .todo-container {
     display: flex;
     flex-direction: row;
-    position: relative;
   }
   
   .todo-row {
